v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -71,11 +71,30 @@
 	"legal": {
 		"header": "İstifadə Şərtləri",
 		"accept": "Qəbul et",
+		"about_1": "<b>səhiyyə.net</b> platforması, tibbi xidmətlərə innovativ və rəqəmsal yanaşmanı təmin etmək məqsədilə qurulmuşdur. Səhiyyə sahəsində ən qabaqcıl texnologiyaları tətbiq edərək, pasiyentlərə qlobal səviyyədə ixtisaslaşmış həkimlərlə birbaşa əlaqə qurma imkanı təqdim edir. Missiyamız, pasiyentlərə keyfiyyətli tibbi mualicəni daha əlçatan edərkən, eyni zamanda hər kəsə yerindən asılı olmayaraq etibarlı, sürətli və keyfiyyətli tibbi konsultasiya xidmətləri göstərməkdir.",
+		"about_2": "səhiyyə.net vasitəsilə siz, dünyanın müxtəlif ölkələrindəki xəstəxanalarda işləyən geniş təcrübəyə malik həkimlərdən ehtiyacınız olan tibbi sahələr üzrə məsləhətlər ala, diaqnoz və müalicə proseslərini online şəkildə həyata keçirə bilərsiniz. Məqsədimiz, pasiyentlərə ən doğru tibbi məlumatları və məsləhətləri təqdim etməklə, onlara sağlamlıqla bağlı daha məlumatlı və inamlı qərarlar vermələrinə dəstək olmaqdır.",
+		"about_3": "Tibb dünyasında etibarlılıq və peşəkarlıq əsas prioritetlərimizdir. Həkimlərimiz yüksək ixtisaslı mütəxəssislərdən ibarətdir və onlarla birbaşa əlaqə quraraq, sağlamlıqla bağlı istənilən mövzuda dəqiq məsləhətlər ala bilərsiniz. səhiyyə.net-in təqdim etdiyi onlayn səhiyyə xidmətləri ilə vaxtınıza qənaət edərək, həkimlərimizə rahatlıqla müraciət etmək imkanı əldə edirsiniz.",
 		"1": "Nəzərinizə çatdırırıq ki, görüşünüzün vaxtı həkim tərəfindən dəyişdirilə bilər.",
 		"2": "Bu təqdirdə yeni təyin olunan vaxt sizə bildiriş olaraq göndərilir və dəyişikliklər profilinizdə qeyd olunur.",
 		"3": "Pasient və həkimlər arasında qurulan dialoq və paylaşılan məlumatların konfidensiallığı qorunmaqdadır.",
 		"4": "Həkimlərin təyin etmiş olduğu müalicə üsulları və dərman vasitələri onların öz məsuliyyətindədir.",
-		"5": "Platformamız bu müalicə üsulları və dərmanların təsirinə və ya təsirsizliyinə görə hər hansı bir məsuliyyət daşımamaqdadır."
+		"5": "Platformamız bu müalicə üsulları və dərmanların təsirinə və ya təsirsizliyinə görə hər hansı bir məsuliyyət daşımamaqdadır.",
+		"h1": "1. Ümumi Şərtlər",
+		"c1": "səhiyyə.net, istifadəçilərə onlayn tibbi məsləhətlər təqdim etmək məqsədilə fəaliyyət göstərir.Platforma tibbi məsləhət xidməti təklif etsə də, tam müalicə və ya diaqnoz üçün sağlamlıq problemləri ilə bağlı qərarlar verməzdən əvvəl yerli səhiyyə orqanları ilə də məsləhətləşməlidirlər.",
+		"h2": "2. Həkim Məsuliyyəti",
+		"c2": "Həkimlər təyin etdikləri müalicə və dərmanlar ilə bağlı bütün məsuliyyəti öz üzərinə götürürlər və bunlara görə pasiyent tərəfindən sehiyye.net platformasına qarşı heç bir iddia qaldırıla bilməz. Platformada fəaliyyət göstərən həkimlərin özləri məsləhət xidmətlərinin düzgünlüyü və etibarlılığına görə məsuliyyət daşıyırlar. səhiyyə.net, həkimlərin verdiyi məsləhətlər, müalicə metodları, yazdığı dərmanlar və digər tövsiyələrə görə hər hansı bir məsuliyyətə cəlb oluna bilməz.",
+		"h3": "3. Xidmətin Məhdudlaşdırılması",
+		"c3": "səhiyyə.net vasitəsilə təqdim olunan xidmətlər yalnız məsləhət məqsədli olub, tam müalicə və ya təcili tibbi yardım məqsədilə istifadə edilə bilməz. Həkimlər tərəfindən yazılan tövsiyələr istifadəçilərin yaşadığı ölkədə mövcud olan səhiyyə qaydalarına uyğun olmadıqda, vəya dərman vasitələri tapılmadıqda bundan yaranacaq problemlərin həlli istifadəçilərin öz öhdəliyindədir. İstifadəçilər platformamız vasitəsilə verilən tibbi məsləhətlər əsasında hərəkət etmədən əvvəl bütün lazımi məlumatları diqqətlə nəzərdən keçirməlidirlər.",
+		"h4": "4. İstifadəçi Məsuliyyəti",
+		"c4": "İstifadəçilər platforma vasitəsilə təqdim edilən xidmətlərdən şəxsi istifadələri üçün faydalana bilərlər. Başqalarının məlumatlarına müdaxilə etmək, həkimlərin tövsiyələrini təhrif etmək və ya qeyri-qanuni məqsədlərlə istifadə etmək qadağandır. Hər bir istifadəçi öz hesab məlumatlarının məxfiliyinə və istifadəsinə görə məsuliyyət daşıyır. İstifadəçi tərəfindən yanlış məlumat verilməsi və ya yanlış istifadəyə görə yaranan hər hansı zərərlərə görə səhiyyə.net məsuliyyət daşımır.",
+		"h5": "5. Məxfilik Siyasəti",
+		"c5": "səhiyyə.net, istifadəçilərin şəxsi məlumatlarının qorunmasına böyük önəm verir. Platformamızda qeydiyyatdan keçərkən və ya xidmətlərdən istifadə edərkən təqdim etdiyiniz şəxsi məlumatlar bizim məxfilik siyasətimizə uyğun olaraq işlənir və üçüncü tərəflərə ötürülmür. Məlumatların təhlükəsizliyi təmin edilsə də, onlayn platformalarda tam təhlükəsizlik təmin edilə bilməyəcəyindən istifadəçilər bu riskləri qəbul edir.",
+		"h6": "6. Ödənişlər və İadə Şərtləri",
+		"c6": "Platformada göstərilən xidmətlərə görə ödənişlər qəbul edildikdən sonra geri qaytarılmır. İstənilən halda, ödəniş şərtləri və məbləğlər platforma daxilində göstəriləcək və istifadəçilərdən bu şərtləri qəbul etmələri tələb olunacaq. Mübahisəli hallar olduqda, istifadəçilər müvafiq dəstək kanalları vasitəsilə əlaqə saxlaya bilərlər.",
+		"h7": "7. Platformanın Fəaliyyəti və Məsuliyyəti",
+		"c7": "səhiyyə.net platformasının fasiləsiz və problemsiz işləməsi üçün bütün lazımi tədbirlər görülmüşdür. Lakin texniki nasazlıqlar, sistem problemləri və ya üçüncü tərəflərin fəaliyyəti nəticəsində yaranan fasilələrdən dolayı səhiyyə.net məsuliyyət daşımır. Platformanın işləməsinə dair hər hansı problemlər və ya suallar yaranarsa, istifadəçilər müvafiq texniki dəstək almalıdırlar.",
+		"h8": "8. İstifadə Şərtlərinin Dəyişdirilməsi",
+		"c8": "səhiyyə.net bu şərtləri istənilən zaman dəyişdirmək hüququna malikdir. Dəyişikliklər platformada dərc edildikdən sonra qüvvəyə minir. İstifadəçilər yeni şərtlərlə razılaşmadıqda platformadan istifadəni dayandıra bilərlər."
 	},
 	"gpt": {
 		"ask_anything": "Sualınız?",
