--- a/src/lib/components/locales/en.json
+++ b/src/lib/components/locales/en.json
@@ -1,81 +1,201 @@
 {
 	"home": {
-		"hero": "Digital Approach to Healthcare",
-		"lead": "Contact with a doctor online",
-		"search": "Search",
-		"symptoms": "Symptoms",
-		"faq": "Frequently asked questions",
-		"doctor": "doctors"
+	  "hero": "Your Online Healthcare Platform",
+	  "lead": "VIDEO CONSULTATION WITH FOREIGN DOCTORS",
+	  "search": "Search",
+	  "symptoms": "Symptoms",
+	  "faq": "Frequently asked questions",
+	  "doctor": "doctors"
 	},
 	"nav": {
-		"home": "Home Page",
-		"docs": "Doctors",
-		"branches": "Branches",
-		"diseases": "Diseases",
-		"appointments": "Appointments",
-		"blog": "Blog",
-		"contact": "Contact",
-		"account": "My Account",
-		"login": "Login"
+	  "home": "Home Page",
+	  "docs": "Doctors",
+	  "branches": "Departments",
+	  "diseases": "Diseases",
+	  "appointments": "Meetings",
+	  "blog": "Blog",
+	  "contact": "Contact",
+	  "account": "My account",
+	  "login": "Introduction",
+	  "logout": "Exit",
+	  "messages": "Messages",
+	  "about": "About us",
+	  "menu": "Menu"
 	},
 	"doctor": {
-		"about": "About doctor",
-		"comments": "Comments",
-		"your_comment": "Your comment"
+	  "about": "About the doctor",
+	  "comments": "Comments",
+	  "your_comment": "Write a comment",
+	  "await_confirmation": "Your comment is awaiting approval.",
+	  "no_comments": "There are no comments about the doctor",
+	  "hospitals": "Hospitals where he works",
+	  "certificates": "Certificates",
+	  "langs_spoken": "Languages ​​spoken",
+	  "diseases": "Diseases treated",
+	  "nationality": "Nationality",
+	  "order_by": "Sort it out",
+	  "order_by_point": "According to the aunt",
+	  "order_by_name": "According to the name",
+	  "order_by_price": "For the price",
+	  "documents": "Documents",
+	  "history": "Past Meetings"
+	},
+	"titles": {
+	  "1": "Dr",
+	  "2": "Associate professor",
+	  "3": "Assistant"
 	},
 	"appointment": {
-		"loginToSee": "Randevuları görmək üçün hesaba",
-		"login": "giriş et",
-		"get": "Get Appointment",
-		"no_appointment": "No appointment .."
+	  "loginToSee": "To view appointments",
+	  "login": "Login to account",
+	  "get": "Make an appointment with a doctor",
+	  "no_appointment": "There is no meeting",
+	  "planned": "Scheduled meeting",
+	  "list": "My meetings"
 	},
 	"other": {
-		"notFound": "Nəticə Tapılmadı"
+	  "notFound": "No result found",
+	  "search_symptoms": "Write down your symptoms",
+	  "welcome": "You are welcome",
+	  "no_msg": "There are no new messages",
+	  "no_file": "There is no file"
 	},
 	"faq": {
-		"q1": "How do I book an appointment with a doctor?",
-		"a1": "Booking an appointment is simple. Follow these steps:Sign in to your account.Navigate to the 'Book Appointment' section.Choose a doctor from the list of available doctors.Select a convenient date and time for your appointment.Confirm your appointment details and complete the booking.",
-		"q2": "What should I do if I need to cancel or reschedule my appointment?",
-		"a2": "If you need to cancel or reschedule your appointment, follow these steps:Sign in to your account.Go to the 'My Appointments' section.Find the appointment you want to change.Click on the 'Cancel' or 'Reschedule' button.If rescheduling, choose a new date and time and confirm the changes.",
-		"q3": "How do I join a video call with my doctor?",
-		"a3": "To join a video call with your doctor, follow these steps:Sign in to your account.Go to the 'My Appointments' section.Find the upcoming appointment and click on it.At the scheduled time, click the 'Join Video Call' button.Ensure your camera and microphone are enabled for the call."
+	  "q1": "How can I book a doctor's appointment?",
+	  "a1": "Booking an appointment is simple. ",
+	  "q2": "What if I need to cancel or reschedule my appointment?",
+	  "a2": "If you need to cancel or reschedule your appointment, follow these steps: Sign in to your account. ",
+	  "q3": "How do I join a video call with a doctor?",
+	  "a3": "Follow these steps to join a video call with your doctor: Sign in to your account. "
 	},
 	"legal": {
-		"1": "We inform you that the time of your appointment can be changed by the doctor.",
-		"2": "In this case, the newly set time is sent to you as a notification and the changes are recorded in your profile.",
-		"3": "Confidentiality of the dialogue established between patients and doctors and shared information is protected.",
-		"4": "The treatment methods and medicines prescribed by doctors are their own responsibility.",
-		"5": "Our platform does not assume any responsibility for the effectiveness or ineffectiveness of these treatments and drugs."
+	  "1": "Please note that the time of your appointment can be changed by the doctor.",
+	  "2": "In this case, the newly set time is sent to you as a notification and the changes are recorded in your profile.",
+	  "3": "The confidentiality of the dialogue established between the patient and the doctors and the shared information is protected.",
+	  "4": "Treatment methods and medicines prescribed by doctors are their own responsibility.",
+	  "5": "Our platform does not bear any responsibility for the effectiveness or ineffectiveness of these treatments and drugs.",
+	  "header": "Terms of Use",
+	  "accept": "Accept it",
+	  "about_1": "<b>health.net</b> platform was built to provide an innovative and digital approach to medical services. ",
+	  "about_2": "Through healthcare.net, you can get advice on the medical fields you need from doctors with extensive experience working in hospitals in different countries of the world, and carry out diagnosis and treatment processes online. ",
+	  "about_3": "In the world of medicine, reliability and professionalism are our top priorities. ",
+	  "h1": "1. General Terms and Conditions",
+	  "c1": "healthcare.net operates to provide online medical advice to users. Although the platform offers medical advice service, they should also consult local health authorities before making decisions about health problems for full treatment or diagnosis.",
+	  "h2": "2. Physician Liability",
+	  "c2": "Doctors take full responsibility for the treatments and medicines they prescribe, and no claim can be made by the patient against the sehiyye.net platform. ",
+	  "h3": "3. Limitation of Service",
+	  "c3": "The services provided through healthcare.net are for advisory purposes only and cannot be used for full treatment or emergency medical care. ",
+	  "h4": "4. User Responsibility",
+	  "c4": "Users can benefit from the services provided through the platform for their personal use. ",
+	  "h5": "5. Privacy Policy",
+	  "c5": "health.net attaches great importance to the protection of users' personal information. ",
+	  "h6": "6. Payments and Refunds Terms",
+	  "c6": "Payments for services provided on the Platform are non-refundable once received. ",
+	  "h7": "7. Platform Activity and Liability",
+	  "c7": "All the necessary measures have been taken for the uninterrupted and problem-free operation of the health.net platform. ",
+	  "h8": "8. Modification of Terms of Use",
+	  "c8": "health.net reserves the right to change these terms at any time. "
+	},
+	"gpt": {
+	  "ask_anything": "Your question?",
+	  "error": "Error! ",
+	  "clear": "Clean up"
 	},
 	"actions": {
-		"change": "Change",
-		"confirm": "Confirm",
-		"send": "Send"
+	  "change": "Change it",
+	  "confirm": "Confirm",
+	  "send": "Send",
+	  "clear": "Clean up",
+	  "leave": "Exit",
+	  "leave_call": "Close it",
+	  "update": "Refresh",
+	  "success": "Successful",
+	  "add_pp": "Add a new photo",
+	  "remove_pp": "Remove profile picture",
+	  "view_pp": "Look at the picture",
+	  "close": "Close it",
+	  "add_file": "Add file",
+	  "wait": "Wait",
+	  "details": "More",
+	  "send_msg": "Send a message",
+	  "message_sent": "Message sent!",
+	  "thank_for_contact": "Thanks for getting in touch",
+	  "back": "Back",
+	  "thank_for_review": "Thanks for your appreciation",
+	  "contact_us": "Contact us",
+	  "lang_selection": "Language Selection",
+	  "pay": "Pay"
+	},
+	"profile": {
+	  "docs": "My Analysis and Recipes",
+	  "doctors": "My doctors",
+	  "logout": "Sign Out"
+	},
+	"call": {
+	  "mic_off": "Turn off the microphone",
+	  "mic_on": "Turn on the microphone",
+	  "end": "End the meeting",
+	  "no": "No",
+	  "yes": "It ends",
+	  "ended": "The meeting was terminated",
+	  "join": "Join a Video Meeting",
+	  "wait": "Wait"
 	},
 	"login": {
-		"login_header": "Login to account",
-		"mobile": "Mobile",
-		"pass": "Password",
-		"login": "Login",
-		"no_account": "Don't have an account?",
-		"yes_account": "Have an account?",
-		"register": "Registration",
-		"login_account": "Login to account",
-		"name_surname": "Name Surname",
-		"email": "Email"
+	  "login_header": "Account login",
+	  "mobile": "Mobile",
+	  "pass": "Password",
+	  "login": "Introduction",
+	  "no_account": "Don't have an account?",
+	  "yes_account": "Do you have an account?",
+	  "register": "Registration",
+	  "login_account": "Account login",
+	  "name_surname": "Name Surname",
+	  "email": "Email",
+	  "error": "Error! ",
+	  "try_again": "Please try again",
+	  "contact": "Communication tool",
+	  "message": "Your message"
+	},
+	"usage": {
+	  "header": "Terms of Use",
+	  "register": "Registration",
+	  "register_details": "First, create a personal profile account by registering on the platform. ",
+	  "get_appointment": "Make an appointment",
+	  "get_appointment_details": "After registering, log in to your account and go to 'Make an Appointment'. ",
+	  "payment": "Make payment",
+	  "payment_details": "You can pay the service fee online before the appointment. ",
+	  "join_appointment": "See a doctor",
+	  "join_appointment_details": "Log in to the platform at your scheduled time and join the video call from the 'My Appointments' section. ",
+	  "check_appointment": "View data",
+	  "check_appointment_details": "After each appointment, you can see your correspondence with the doctor, your consultation history and all other information in your profile."
 	},
 	"months": {
-		"1": "January",
-		"2": "February",
-		"3": "March",
-		"4": "April",
-		"5": "May",
-		"6": "June",
-		"7": "July",
-		"8": "August",
-		"9": "September",
-		"10": "October",
-		"11": "November",
-		"12": "December"
+	  "1": "January",
+	  "2": "February",
+	  "3": "March",
+	  "4": "April",
+	  "5": "May",
+	  "6": "June",
+	  "7": "July",
+	  "8": "August",
+	  "9": "September",
+	  "10": "October",
+	  "11": "November",
+	  "12": "December"
+	},
+	"nations": {
+	  "arab": "Arab",
+	  "iran": "Iran",
+	  "turk": "Turkey",
+	  "aze": "Azerbaijan"
+	},
+	"langs": {
+	  "arab": "Arabic",
+	  "iran": "Persian",
+	  "turk": "Turkish",
+	  "aze": "Azerbaijani",
+	  "eng": "English",
+	  "ru": "Russian"
 	}
-}
+  }
