--- a/src/lib/components/locales/ru.json
+++ b/src/lib/components/locales/ru.json
@@ -1,36 +1,201 @@
 {
 	"home": {
-		"hero": "Цифровой подход к здравоохранению",
-		"lead": "Doktorunuzla İnternet Üzerinden Bağlantı Kurun, Sağlığınızı Şimdi Yönetin",
-		"search": "Поиск",
-		"symptoms": "Cимптомы",
-		"faq": "Часто задаваемые вопросы",
-		"doctor": "врач"
+	  "hero": "Ваша онлайн-платформа здравоохранения",
+	  "lead": "ВИДЕО КОНСУЛЬТАЦИЯ С ИНОСТРАННЫМИ ВРАЧАМИ",
+	  "search": "Поиск",
+	  "symptoms": "Симптомы",
+	  "faq": "Часто задаваемые вопросы",
+	  "doctor": "врач"
 	},
 	"nav": {
-		"home": "Дом",
-		"docs": "Врачи",
-		"branches": "Ветви",
-		"diseases": "Болезни",
-		"appointments": "Назначения",
-		"blog": "Блог",
-		"contact": "Контакт",
-		"account": "Мой аккаунт",
-		"login": "Авторизоваться"
+	  "home": "Домашняя страница",
+	  "docs": "Врачи",
+	  "branches": "Отделы",
+	  "diseases": "Болезни",
+	  "appointments": "Встречи",
+	  "blog": "Блог",
+	  "contact": "Контакт",
+	  "account": "Мой счет",
+	  "login": "Введение",
+	  "logout": "Выход",
+	  "messages": "Сообщения",
+	  "about": "О нас",
+	  "menu": "Меню"
+	},
+	"doctor": {
+	  "about": "О докторе",
+	  "comments": "Комментарии",
+	  "your_comment": "Написать комментарий",
+	  "await_confirmation": "Ваш комментарий ожидает одобрения.",
+	  "no_comments": "К врачу отзывов нет.",
+	  "hospitals": "Больницы, где он работает",
+	  "certificates": "Сертификаты",
+	  "langs_spoken": "Языки общения",
+	  "diseases": "Заболевания, которые лечат",
+	  "nationality": "Национальность",
+	  "order_by": "Разберитесь с этим",
+	  "order_by_point": "По словам тети",
+	  "order_by_name": "Судя по названию",
+	  "order_by_price": "По цене",
+	  "documents": "Документы",
+	  "history": "Прошедшие встречи"
+	},
+	"titles": {
+	  "1": "Доктор",
+	  "2": "Доцент",
+	  "3": "Ассистент"
 	},
 	"appointment": {
-		"loginToSee": "Randevularınızı görmek için ",
-		"login": "hesabınıza girin"
+	  "loginToSee": "Чтобы просмотреть встречи",
+	  "login": "Войти в аккаунт",
+	  "get": "Записаться на прием к врачу",
+	  "no_appointment": "Нет встречи",
+	  "planned": "Запланированная встреча",
+	  "list": "Мои встречи"
 	},
 	"other": {
-		"notFound": "Sonuç bulunamadı"
+	  "notFound": "Результат не найден",
+	  "search_symptoms": "Запишите свои симптомы",
+	  "welcome": "Пожалуйста",
+	  "no_msg": "Новых сообщений нет",
+	  "no_file": "Нет файла"
 	},
 	"faq": {
-		"q1": "Как записаться на прием к врачу?",
-		"a1": "Записаться на прием очень просто. Выполните следующие действия: Войдите в свою учетную запись. Перейдите в раздел «Записаться на прием». Выберите врача из списка доступных врачей. Выберите удобную дату и время для записи. Подтвердите детали встречи и завершите бронирование.",
-		"q2": "Что делать, если мне нужно отменить или перенести встречу?",
-		"a2": "Если вам нужно отменить или перенести встречу, выполните следующие действия: Войдите в свою учетную запись. Перейдите в раздел «Мои встречи». Найдите встречу, которую вы хотите изменить. Нажмите «Отменить» или « Кнопка «Перенести». При переносе выберите новую дату и время и подтвердите изменения.",
-		"q3": "Как мне присоединиться к видеозвонку с врачом?",
-		"a3": "Чтобы присоединиться к видеозвонку со своим врачом, выполните следующие действия: Войдите в свою учетную запись. Перейдите в раздел «Мои встречи». Найдите предстоящую встречу и нажмите на нее. В запланированное время нажмите « Кнопка «Присоединиться к видеовызову». Убедитесь, что ваша камера и микрофон включены для вызова"
+	  "q1": "Как я могу записаться на прием к врачу?",
+	  "a1": "Записаться на прием просто. ",
+	  "q2": "Что делать, если мне нужно отменить или перенести встречу?",
+	  "a2": "Если вам нужно отменить или перенести встречу, выполните следующие действия: Войдите в свою учетную запись. ",
+	  "q3": "Как присоединиться к видеозвонку с врачом?",
+	  "a3": "Выполните следующие действия, чтобы присоединиться к видеозвонку со своим врачом: Войдите в свою учетную запись. "
+	},
+	"legal": {
+	  "1": "Обратите внимание, что время приема может быть изменено врачом.",
+	  "2": "В этом случае вновь установленное время отправляется вам в виде уведомления, а изменения фиксируются в вашем профиле.",
+	  "3": "Конфиденциальность диалога, установленного между пациентом и врачами, и передаваемой информации защищена.",
+	  "4": "Методы лечения и лекарства, назначенные врачами, являются их собственной ответственностью.",
+	  "5": "Наша платформа не несет никакой ответственности за эффективность или неэффективность этих методов лечения и препаратов.",
+	  "header": "Условия эксплуатации",
+	  "accept": "Примите это",
+	  "about_1": "<b>здоровье.нет</b> Платформа была создана для обеспечения инновационного цифрового подхода к медицинским услугам. ",
+	  "about_2": "Через health.net вы можете получить консультации по нужным вам направлениям медицины от врачей с большим опытом работы в больницах разных стран мира, а также провести процессы диагностики и лечения онлайн. ",
+	  "about_3": "В мире медицины надежность и профессионализм являются нашими главными приоритетами. ",
+	  "h1": "1. Общие положения и условия",
+	  "c1": "Health.net предоставляет пользователям медицинские консультации онлайн. Хотя платформа предлагает услуги медицинских консультаций, им также следует проконсультироваться с местными органами здравоохранения, прежде чем принимать решения о проблемах со здоровьем для полноценного лечения или диагностики.",
+	  "h2": "2. Ответственность врача",
+	  "c2": "Врачи несут полную ответственность за лечение и лекарства, которые они назначают, и пациент не может предъявлять никаких претензий к платформе sehiyye.net. ",
+	  "h3": "3. Ограничение обслуживания",
+	  "c3": "Услуги, предоставляемые через сайт health.net, предназначены только для консультативных целей и не могут быть использованы для полноценного лечения или оказания неотложной медицинской помощи. ",
+	  "h4": "4. Ответственность пользователя",
+	  "c4": "Пользователи могут воспользоваться услугами, предоставляемыми через платформу, для личного использования. ",
+	  "h5": "5. Политика конфиденциальности",
+	  "c5": "health.net придает большое значение защите личной информации пользователей. ",
+	  "h6": "6. Условия платежей и возврата средств",
+	  "c6": "Платежи за услуги, предоставляемые на Платформе, не подлежат возврату после их получения. ",
+	  "h7": "7. Деятельность и ответственность Платформы",
+	  "c7": "Приняты все необходимые меры для бесперебойной и беспроблемной работы платформы health.net. ",
+	  "h8": "8. Изменение условий использования",
+	  "c8": "health.net оставляет за собой право изменить эти условия в любое время. "
+	},
+	"gpt": {
+	  "ask_anything": "Ваш вопрос?",
+	  "error": "Ошибка! ",
+	  "clear": "Очистить"
+	},
+	"actions": {
+	  "change": "Измени это",
+	  "confirm": "Подтверждать",
+	  "send": "Отправлять",
+	  "clear": "Очистить",
+	  "leave": "Выход",
+	  "leave_call": "Закрой это",
+	  "update": "Обновить",
+	  "success": "Успешный",
+	  "add_pp": "Добавить новую фотографию",
+	  "remove_pp": "Удалить изображение профиля",
+	  "view_pp": "Посмотрите на картинку",
+	  "close": "Закрой это",
+	  "add_file": "Добавить файл",
+	  "wait": "Ждать",
+	  "details": "Более",
+	  "send_msg": "Отправить сообщение",
+	  "message_sent": "Сообщение отправлено!",
+	  "thank_for_contact": "Спасибо, что связались",
+	  "back": "Назад",
+	  "thank_for_review": "Спасибо за вашу оценку",
+	  "contact_us": "Связаться с нами",
+	  "lang_selection": "Выбор языка",
+	  "pay": "Платить"
+	},
+	"profile": {
+	  "docs": "Мои анализы и рецепты",
+	  "doctors": "Мои врачи",
+	  "logout": "Выход"
+	},
+	"call": {
+	  "mic_off": "Выключить микрофон",
+	  "mic_on": "Включите микрофон",
+	  "end": "Завершить встречу",
+	  "no": "Нет",
+	  "yes": "Это заканчивается",
+	  "ended": "Встреча была прекращена",
+	  "join": "Присоединиться к видеоконференции",
+	  "wait": "Ждать"
+	},
+	"login": {
+	  "login_header": "Вход в аккаунт",
+	  "mobile": "мобильный",
+	  "pass": "Пароль",
+	  "login": "Введение",
+	  "no_account": "У вас нет учетной записи?",
+	  "yes_account": "У вас есть учетная запись?",
+	  "register": "Регистрация",
+	  "login_account": "Вход в аккаунт",
+	  "name_surname": "Имя Фамилия",
+	  "email": "Электронная почта",
+	  "error": "Ошибка! ",
+	  "try_again": "Пожалуйста, попробуйте еще раз",
+	  "contact": "Инструмент коммуникации",
+	  "message": "Ваше сообщение"
+	},
+	"usage": {
+	  "header": "Условия эксплуатации",
+	  "register": "Регистрация",
+	  "register_details": "Сначала создайте учетную запись личного профиля, зарегистрировавшись на платформе. ",
+	  "get_appointment": "Назначить встречу",
+	  "get_appointment_details": "После регистрации войдите в свою учетную запись и перейдите в раздел «Назначить встречу». ",
+	  "payment": "Произвести оплату",
+	  "payment_details": "Оплатить услугу можно онлайн перед записью. ",
+	  "join_appointment": "Обратитесь к врачу",
+	  "join_appointment_details": "Войдите на платформу в назначенное время и присоединитесь к видеозвонку из раздела «Мои встречи». ",
+	  "check_appointment": "Просмотр данных",
+	  "check_appointment_details": "После каждого приема вы можете увидеть переписку с врачом, историю консультаций и всю другую информацию в своем профиле."
+	},
+	"months": {
+	  "1": "январь",
+	  "2": "февраль",
+	  "3": "Маршировать",
+	  "4": "апрель",
+	  "5": "Может",
+	  "6": "Июнь",
+	  "7": "Июль",
+	  "8": "Август",
+	  "9": "Сентябрь",
+	  "10": "Октябрь",
+	  "11": "ноябрь",
+	  "12": "декабрь"
+	},
+	"nations": {
+	  "arab": "араб",
+	  "iran": "Иран",
+	  "turk": "Турция",
+	  "aze": "Азербайджан"
+	},
+	"langs": {
+	  "arab": "арабский",
+	  "iran": "персидский",
+	  "turk": "турецкий",
+	  "aze": "азербайджанский",
+	  "eng": "Английский",
+	  "ru": "Русский"
 	}
-}
+  }
