v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -115,6 +115,7 @@
 		"view_pp": "Şəklə bax",
 		"close": "Bağla",
 		"add_file": "Fayl əlavə et",
+		"delete_file": "Faylı sil",
 		"wait": "Gözləyin",
 		"details": "Ətraflı",
 		"send_msg": "Mesaj göndər",
